--- a/TnTComponents/Styles/TnTComponents/_buttons.scss
+++ b/TnTComponents/Styles/TnTComponents/_buttons.scss
@@ -14,7 +14,7 @@ button[is=tnt-button] {
     vertical-align: bottom;
     cursor: pointer;
 
-    &:not(:has(.tnt-outlined)) {
+    &:not(&.tnt-outlined) {
         outline: none;
     }
 
@@ -69,7 +69,7 @@ input::file-selector-button {
     vertical-align: bottom;
     cursor: pointer;
 
-    &:not(:has(.tnt-outlined)) {
+    &:not(&.tnt-outlined) {
         outline: none;
     }
 
