--- a/TnTComponents/Styles/TnTComponents/_dialog.scss
+++ b/TnTComponents/Styles/TnTComponents/_dialog.scss
@@ -15,6 +15,7 @@
         max-height: 75%;
         min-width: 25%;
         overflow-y: auto;
+        overflow-x: clip;
         z-index: 2001;
         transition: 200ms ease-in-out;
         animation: dialogGrow 100ms ease-in-out forwards;
