--- a/TnTComponents/Styles/TnTComponents/_scheduler.scss
+++ b/TnTComponents/Styles/TnTComponents/_scheduler.scss
@@ -44,10 +44,13 @@
                 padding: 0.25rem;
                 box-sizing: border-box;
                 margin: 0.1rem;
-                cursor: grab;
                 user-select: none;
                 text-overflow: clip;
                 overflow: hidden;
+                &.tnt-grabbable{
+                    cursor:grab;
+                }
+
             }
         }
     }
